Updated many files
- CMakeLists.txt updated for 3.0+
- compiles with C++17
- removed Array template, use std::vector instead
- Computer is now a template (abstracted byte size)
- moved source int /src
- updated main loop in SpectrumThread to handle QT events

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,52 +1,48 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
-PROJECT(spectrum)
-FIND_PACKAGE(Qt4 REQUIRED)
+cmake_minimum_required(VERSION 3.0)
+project(spectrum LANGUAGES CXX)
 
-#source code files
-SET(spectrum_SOURCES computer.cpp cpu.cpp imagewidget.cpp mainwindow.cpp qspectrumdebugwindow.cpp qspectrumdisplay.cpp spectrum.cpp spectrumdisplaydevice.cpp spectrum_main.cpp spectrumthread.cpp z80.cpp z80interpreter.cpp z80interpreter_main.cpp z80iodevice.cpp )
-SET(z80interpreter_SOURCES computer.cpp cpu.cpp imagewidget.cpp mainwindow.cpp qspectrumdebugwindow.cpp qspectrumdisplay.cpp spectrum.cpp spectrumdisplaydevice.cpp spectrum_main.cpp spectrumthread.cpp z80.cpp z80interpreter.cpp z80interpreter_main.cpp z80iodevice.cpp )
+find_package(Qt5 COMPONENTS Core Gui Widgets)
 
-FOREACH(item ${spectrum_SOURCES})
-	STRING(REGEX MATCH "z80interpreter.*" isMatch ${item})
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTORCC ON)
 
-	IF(isMatch)
-		LIST(REMOVE_ITEM spectrum_SOURCES ${item})
-	ENDIF(isMatch)
-ENDFOREACH(item)
+include_directories(${CMAKE_BINARY_DIR})
 
-LIST(REMOVE_ITEM z80interpreter_SOURCES "spectrum_main.cpp")
+add_executable(
+        spectrum
+        src/cpu.cpp
+        src/imagewidget.cpp
+        src/mainwindow.cpp
+        src/qspectrumdebugwindow.cpp
+        src/qspectrumdisplay.cpp
+        src/spectrum.cpp
+        src/spectrum_main.cpp
+        src/spectrumthread.cpp
+        src/z80.cpp
+        src/z80iodevice.cpp
+)
 
-MESSAGE(STATUS "Spectrum sources: ${spectrum_SOURCES}")
-MESSAGE(STATUS "Z80Interpreter sources: ${z80interpreter_SOURCES}")
-MESSAGE(FATAL_ERROR "Stopping now.")
+add_executable(
+        z80interpreter
+        src/cpu.cpp
+        src/imagewidget.cpp
+        src/mainwindow.cpp
+        src/qspectrumdebugwindow.cpp
+        src/qspectrumdisplay.cpp
+        src/spectrum.cpp
+        src/spectrumthread.cpp
+        src/z80.cpp
+        src/z80interpreter.cpp
+        src/z80interpreter_main.cpp
+        src/z80iodevice.cpp
+)
 
-# files that need to be processed by uic
-SET(spectrum_UI_FILES )
+set_target_properties(
+        spectrum z80interpreter
+        PROPERTIES
+            CXX_STANDARD 17
+)
 
-# headers that need to be processed by moc
-SET(spectrum_MOC_HEADERS imagewidget.h mainwindow.h qspectrumdebugwindow.h qspectrumdisplay.h spectrumthread.h )
-
-# all headers
-SET(spectrum_HEADERS ${spectrum_MOC_HEADERS} array.h computer.h cpu.h spectrumdisplaydevice.h spectrum.h types.h z80.h z80interpreter.h z80iodevice.h z80_opcodes_cb.h z80_opcodes_dd.h z80_opcodes_ddorfd_cb.h z80_opcodes_ddorfd.h z80_opcodes_ed.h z80_opcodes_fd.h z80_opcodes.h z80_opcodes_plain.h )
-
-# resource files
-SET(spectrum_RESOURCES )
-
-# run moc on the moc headers and get the generated source files
-QT4_WRAP_CPP(spectrum_MOC_SOURCES ${spectrum_MOC_HEADERS})
-
-# run uic on the ui files and get the generated source files
-QT4_WRAP_UI(spectrum_UI_SOURCES ${spectrum_UI_FILES})
-INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
-
-# run qrc on the resource files and get the generated source files
-QT4_ADD_RESOURCES(spectrum_RESOURCE_SOURCES ${spectrum_RESOURCES})
-
-#build the application
-INCLUDE(${QT_USE_FILE})
-ADD_DEFINITIONS(${QT_DEFINITIONS})
-
-ADD_EXECUTABLE(spectrum ${spectrum_SOURCES} ${spectrum_MOC_SOURCES} ${spectrum_UI_SOURCES} ${spectrum_RESOURCE_SOURCES})
-ADD_EXECUTABLE(z80interpreter ${z80interpreter_SOURCES} ${spectrum_MOC_SOURCES})
-TARGET_LINK_LIBRARIES(spectrum ${QT_LIBRARIES})
-TARGET_LINK_LIBRARIES(z80interpreter ${QT_LIBRARIES})
+target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets)
+target_link_libraries(z80interpreter Qt5::Core Qt5::Gui Qt5::Widgets)
