--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,62 +11,59 @@ include_directories(${CMAKE_BINARY_DIR})
 
 add_executable(
         spectrum
-        src/emulator/main.cpp
+        src/emulator/spectrum.cpp
         src/emulator/application.cpp
         src/emulator/mainwindow.cpp
+        src/emulator/main.cpp
+        src/cpu.cpp
+        src/z80/z80.cpp
+        src/z80/z80iodevice.cpp
+        src/z80/registers.h
         src/qt/spectrumthread.cpp
         src/qt/ui/qspectrumdebugwindow.cpp
         src/qt/ui/qspectrumdisplay.cpp
-        src/cpu.cpp
         src/qt/ui/imagewidget.cpp
-        src/spectrum.cpp
-        src/z80/z80.cpp
-        src/z80/z80iodevice.cpp
 )
 
 add_executable(
         screenview
-        src/screenview/main.cpp
         src/screenview/application.cpp
         src/screenview/mainwindow.cpp
+        src/screenview/main.cpp
         src/qt/ui/imagewidget.cpp
         src/qt/ui/qspectrumdisplay.cpp
-        src/screenview/mainwindow.cpp
         src/qt/ui/colourcombo.cpp
 )
 
 add_executable(
         z80interpreter
         src/cpu.cpp
-        src/qt/ui/imagewidget.cpp
-        src/spectrum.cpp
         src/z80/z80.cpp
         src/interpreter/z80interpreter.cpp
         src/interpreter/main.cpp
-        src/z80/z80iodevice.cpp
 )
 
 add_executable(
-    z80-test
-    src/test/z80/main.cpp
-    src/test/z80/runner.cpp
-    src/test/z80/runner.h
-    src/test/z80/test.cpp
-    src/test/z80/test.h
-    src/test/z80/memory.h
-    src/test/z80/testfilereader.cpp
-    src/test/z80/testfilereader.h
-    src/cpu.cpp
-    src/z80/z80.cpp
-    src/z80/z80iodevice.cpp
+        z80-test
+        src/test/z80/main.cpp
+        src/test/z80/runner.cpp
+        src/test/z80/test.cpp
+        src/test/z80/expectation.cpp
+        src/test/z80/testbattery.cpp
+        src/test/z80/filereader.cpp
+        src/test/z80/testfilereader.cpp
+        src/test/z80/expectationfilereader.cpp
+        src/cpu.cpp
+        src/z80/z80.cpp
+        src/z80/z80iodevice.cpp
 )
 
 set_target_properties(
         spectrum z80interpreter screenview z80-test
         PROPERTIES
-            CXX_STANDARD 17
+            CXX_STANDARD 20
 )
 
 target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets)
-target_link_libraries(z80interpreter Qt5::Core Qt5::Gui Qt5::Widgets)
+target_link_libraries(z80interpreter Qt5::Core Qt5::Gui Qt5::Widgets readline)
 target_link_libraries(screenview Qt5::Core Qt5::Gui Qt5::Widgets)
