--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 project(spectrum LANGUAGES CXX)
 
-find_package(Qt5 COMPONENTS Core Gui Widgets)
+find_package(Qt5 COMPONENTS Core Gui Widgets Gamepad)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
@@ -23,7 +23,7 @@ add_executable(
         src/qt/ui/qspectrumdebugwindow.cpp
         src/qt/ui/qspectrumdisplay.cpp
         src/qt/ui/imagewidget.cpp
-)
+        src/qt/ui/registerpairwidget.cpp src/qt/ui/registerpairwidget.h src/qt/ui/hexspinbox.cpp src/qt/ui/hexspinbox.h src/qt/ui/flagswidget.cpp src/qt/ui/flagswidget.h src/emulator/spectrumkeyboard.cpp src/emulator/spectrumkeyboard.h src/qt/qspectrumkeyboard.cpp src/qt/qspectrumkeyboard.h src/emulator/kempstonjoystick.cpp src/emulator/kempstonjoystick.h src/qt/qkempstonjoystick.cpp src/qt/qkempstonjoystick.h src/qt/ui/memorywidget.cpp src/qt/ui/memorywidget.h)
 
 add_executable(
         screenview
@@ -64,6 +64,6 @@ set_target_properties(
             CXX_STANDARD 20
 )
 
-target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets)
+target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Gamepad)
 target_link_libraries(z80interpreter Qt5::Core Qt5::Gui Qt5::Widgets readline)
 target_link_libraries(screenview Qt5::Core Qt5::Gui Qt5::Widgets)
