--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,13 +23,14 @@ add_executable(
         src/qt/ui/qspectrumdebugwindow.cpp
         src/qt/ui/qspectrumdisplay.cpp
         src/qt/ui/imagewidget.cpp
-        src/qt/ui/registerpairwidget.cpp src/qt/ui/registerpairwidget.h src/qt/ui/hexspinbox.cpp src/qt/ui/hexspinbox.h src/qt/ui/flagswidget.cpp src/qt/ui/flagswidget.h src/emulator/spectrumkeyboard.cpp src/emulator/spectrumkeyboard.h src/qt/qspectrumkeyboard.cpp src/qt/qspectrumkeyboard.h src/emulator/kempstonjoystick.cpp src/emulator/kempstonjoystick.h src/qt/qkempstonjoystick.cpp src/qt/qkempstonjoystick.h src/qt/ui/memorywidget.cpp src/qt/ui/memorywidget.h)
+        src/qt/ui/registerpairwidget.cpp src/qt/ui/registerpairwidget.h src/qt/ui/hexspinbox.cpp src/qt/ui/hexspinbox.h src/qt/ui/flagswidget.cpp src/qt/ui/flagswidget.h src/emulator/spectrumkeyboard.cpp src/emulator/spectrumkeyboard.h src/qt/qspectrumkeyboard.cpp src/qt/qspectrumkeyboard.h src/emulator/kempstonjoystick.cpp src/emulator/kempstonjoystick.h src/qt/qkempstonjoystick.cpp src/qt/qkempstonjoystick.h src/qt/ui/memorywidget.cpp src/qt/ui/memorywidget.h src/qt/spectrumthreadpauser.cpp src/qt/spectrumthreadpauser.h)
 
 add_executable(
         screenview
         src/screenview/application.cpp
         src/screenview/mainwindow.cpp
         src/screenview/main.cpp
+        src/z80/z80iodevice.cpp
         src/qt/ui/imagewidget.cpp
         src/qt/ui/qspectrumdisplay.cpp
         src/qt/ui/colourcombo.cpp
