Updated debug window
- added poke dock to set a value in a specific address
- added context menu for memory widget to quickly poke a specific address on right-click

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -20,6 +20,8 @@ add_executable(
         qt/breakpoint.cpp
         qt/programcounterbreakpoint.cpp
         qt/debugwindow.cpp
+        qt/pokewidget.cpp
+        qt/pokewidget.h
         qt/qimagedisplaydevice.cpp
         qt/registerpairwidget.cpp
         qt/flagswidget.cpp
