--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -14,6 +14,13 @@ add_executable(
         interfacetwojoystick.cpp
         kempstonjoystick.cpp
         displaydevice.h
+        snapshot.cpp
+        snapshot.h
+        snapshotwriter.cpp
+        z80snapshotwriter.cpp
+        z80snapshotwriter.h
+        snasnapshotwriter.cpp
+        snasnapshotwriter.h
         qt/application.cpp
         qt/mainwindow.cpp
         qt/thread.cpp
@@ -37,8 +44,9 @@ add_executable(
         ../cpu.cpp
         ../z80/z80.cpp
         ../z80/iodevice.cpp
+        ../z80/registers.cpp
         ../z80/registers.h
-        z80snapshotwriter.cpp z80snapshotwriter.h snapshot.cpp snapshot.h)
+)
 
 target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Gamepad)
 
