--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -56,7 +56,7 @@ add_executable(
         ../z80/assembly/operand.cpp
 )
 
-target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Gamepad)
+target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Gamepad z)
 
 set_target_properties(
         spectrum
