Updated debugger UI
- separated out registers and shadow registers components into their own widgets for encapsulation and ease of maintenance

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -31,6 +31,8 @@ add_executable(
         qt/breakpoint.cpp
         qt/programcounterbreakpoint.cpp
         qt/debugwindow.cpp
+        qt/registerswidget.cpp
+        qt/shadowregisterswidget.cpp
         qt/pokewidget.cpp
         qt/pokewidget.h
         qt/qimagedisplaydevice.cpp
