Added Memory class
- Memory class will enable paging to be implemented for Spectrum128, etc., support.

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -53,7 +53,9 @@ add_executable(
         qt/keyboardmonitorwidget.cpp
         qt/imagewidget.cpp
         qt/hexspinbox.cpp
+        ../computer.h
         ../cpu.cpp
+        ../memory.h
         ../z80/z80.cpp
         ../z80/iodevice.cpp
         ../z80/registers.cpp
