Updated snapshot loading
- SP format snapshots are now loaded by a SpSnapshotReader class
- removed old Z80 and SNA loading methods from MainWindow as those reader classes now appear to function as expected

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(
         snapshotwriter.cpp
         z80snapshotreader.cpp
         snasnapshotreader.cpp
+        spsnapshotreader.cpp
         zxsnapshotreader.cpp
         z80snapshotwriter.cpp
         z80snapshotwriter.h
