Updated debugging breakpoints
- decoupled from Qt signals/slots
- templated MemoryChangeBreakpoint so that it can watch for values of any size
- added breakpoint class for register value monitoring
- added breakpoint class for monitoring SP below a certain address
- updated InterruptWidget to include flip-flops
- updated include guards to use _QTUI_ not _QT_

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -37,9 +37,11 @@ add_executable(
         qtui/thread.cpp
         qtui/breakpoint.cpp
         qtui/programcounterbreakpoint.cpp
+        qtui/stackpointerbelowbreakpoint.cpp
         qtui/memorybreakpoint.h
-        qtui/bytechangedbreakpoint.cpp
-        qtui/wordchangedbreakpoint.cpp
+        qtui/memorychangedbreakpoint.h
+        qtui/registerbreakpoint.h
+        qtui/registervaluebreakpoint.cpp
         qtui/debugwindow.cpp
         qtui/registerswidget.cpp
         qtui/shadowregisterswidget.cpp
