Added working  128k and 16k emulation
- added memory model for 128k Spectrum
- added memory model for 16k Spectrum
- determined that ROM for 16k Spectrum is same as 48k
- updated MainWindow to be able to switch between models
- updated Snapshot class to work with Spectrum base class (will need to do checking when apply() is called to ensure that the snapshot is suitable for the provided model
- refactored BaseSpectrum so that reset() is not hard-coded to expect a single ROM imaged, now calls a virtual reloadRoms() method so that subclasses can customise ROM loading behaviour during reset (e.g. 128k re-loads both it's ROMs into the appropriate ROM pages).
- Thread class can now have the Spectrum it is running changed (only while the thread is not actually running)

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -10,6 +10,10 @@ add_executable(
         basespectrum.cpp
         spectrum16k.cpp
         spectrum48k.cpp
+        spectrum128k.cpp
+        spectrum16kmemory.cpp
+        spectrum128kmemory.cpp
+        spectrum128kpagingdevice.cpp
         z80.cpp
         keyboard.cpp
         joystickinterface.cpp
@@ -70,7 +74,6 @@ add_executable(
         ../z80/assembly/disassembler.cpp
         ../z80/assembly/mnemonic.cpp
         ../z80/assembly/operand.cpp
-        spectrum128k.cpp spectrum128k.h
         ../z80/types.cpp)
 
 # TODO libz is only required for debug builds (crc32 memory checksums when dumping Spectrum state to stdout)
