--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -19,10 +19,12 @@ add_executable(
         joystickinterface.cpp
         interfacetwojoystick.cpp
         kempstonjoystick.cpp
+        mouseinterface.cpp
+        kempstonmouse.cpp
         displaydevice.h
         snapshot.cpp
-        snapshot.h
         pokedefinition.cpp
+        types.cpp
         io/snapshotreader.cpp
         io/snapshotwriter.cpp
         io/z80snapshotreader.cpp
@@ -74,7 +76,8 @@ add_executable(
         ../z80/assembly/disassembler.cpp
         ../z80/assembly/mnemonic.cpp
         ../z80/assembly/operand.cpp
-        ../z80/types.cpp kempstonmouse.cpp kempstonmouse.h mouseinterface.cpp mouseinterface.h)
+        ../z80/types.cpp
+)
 
 # TODO libz is only required for debug builds (crc32 memory checksums when dumping Spectrum state to stdout)
 target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Gamepad z)
