--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -82,8 +82,7 @@ add_executable(
         ../z80/types.cpp
 )
 
-# TODO libz is only required for debug builds (crc32 memory checksums when dumping Spectrum state to stdout)
-target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Gamepad z)
+target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Gamepad)
 
 set_target_properties(
         spectrum
