Updated snapshot IO
- readers and writers updated for code quality (they were previously only rough implementations that worked well enough)
- still require review

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -37,6 +37,7 @@ add_executable(
         io/zx82snapshotreader.cpp
         io/z80snapshotwriter.cpp
         io/snasnapshotwriter.cpp
+        io/spsnapshotwriter.cpp
         io/pokfilereader.cpp
         qtui/application.cpp
         qtui/mainwindow.cpp
@@ -80,6 +81,7 @@ add_executable(
         ../z80/assembly/mnemonic.cpp
         ../z80/assembly/operand.cpp
         ../z80/types.cpp
+        ../util/crc32.h
 )
 
 target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Gamepad)
