--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -82,6 +82,7 @@ add_executable(
         ../z80/assembly/operand.cpp
         ../z80/types.cpp
         ../util/crc32.h
+        ../util/endian.h
 )
 
 target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Gamepad)
