--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -86,6 +86,7 @@ add_executable(
         ../z80/types.cpp
         ../util/crc32.h
         ../util/endian.h
+        ../util/debug.h
 )
 
 target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Gamepad)
