Updated 128K model memory classes
- created interface (PagedMemoryInterface) that PagingMemory implements to make it easier to write code that talks to paged memory regardless of implementation (e.g. 128K/+2+2a/+3 memory models can all be access using a PagedMemoryInterface reference/pointer).

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(
         spectrumplus2.cpp
         spectrumplus2a.cpp
         spectrumplus3.cpp
+        pagedmemoryinterface.h
         pagingmemory.h
         memory128k.cpp
         memoryplus2.h
