Added game controller support
- selectable in Spectrum menu
- added handler class to encapsulate connection between a controller and the emulated joystick interface
- emulated joystick no longer consumes keyboard events if no joystick is selected or if the emulated joystick is using a game conroller not a keyboard mapping
- selected game controller saved in settings

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -73,6 +73,7 @@ add_executable(
         qtui/keyboardmonitorwidget.cpp
         qtui/imagewidget.cpp
         qtui/hexspinbox.cpp
+        qtui/gamecontrollerhandler.cpp
         ../computer.h
         ../cpu.cpp
         ../simplememory.h
