Added support for arbitrary memory mapping
Primary driver for these changes is support for, e.g., ZX Interface 1 ROM mapping (i.e. mapping memory from external devices)

- MappableMemoryInterface for consistent implementation
- new base class for basic Spectrum (16k, 48k) memory, implements MappableMemoryInterface
- added MappableMemoryInterface to template class for 128k models' memory
- updated 16k and 48k models to use new memory class
- removed (availableMemorySize) constructor from BaseSpectrum as it's no longer used anywhere
- renamed PagedMemoryInterface to PagingMemoryInterface for consistency

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -14,8 +14,9 @@ add_executable(
         spectrumplus2.cpp
         spectrumplus2a.cpp
         spectrumplus3.cpp
-        pagedmemoryinterface.h
+        pagingmemoryinterface.h
         pagingmemory.h
+        memory.cpp
         memory128k.cpp
         memoryplus2.h
         memoryplus2a.cpp
