--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -1,4 +1,4 @@
-find_package(Qt5 COMPONENTS Core Gui Widgets Gamepad)
+find_package(Qt5 COMPONENTS Core Gui Widgets Gamepad DBus)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
@@ -77,6 +77,7 @@ add_executable(
         qtui/spectrumdisplayimagewidget.cpp
         qtui/hexspinbox.cpp
         qtui/gamecontrollerhandler.cpp
+        qtui/notification.cpp
         ../computer.h
         ../cpu.cpp
         ../simplememory.h
@@ -95,7 +96,7 @@ add_executable(
         ../util/debug.h
 )
 
-target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Gamepad)
+target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Gamepad Qt5::DBus)
 
 set_target_properties(
         spectrum
