Updated emulator UI
- renamed resource files for clarity
- made themeType(), showMessage() and icon() methods of Application static.
- added app icon to AboutWidget

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -83,7 +83,7 @@ add_executable(
         qtui/gamecontrollerhandler.cpp
         qtui/notification.cpp
         qtui/icons.qrc
-        qtui/resources.qrc
+        qtui/help.qrc
         ../computer.h
         ../cpu.cpp
         ../simplememory.h
