Updated ZX82 snapshot IO
- created writer class, including RLE compression
- updated mainwindow to use writer class
- renamed reader class for consistency
- renamed zx snapshot file reader class for consistency

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -46,6 +46,7 @@ add_executable(
         io/z80snapshotwriter.cpp
         io/snasnapshotwriter.cpp
         io/spsnapshotwriter.cpp
+        io/zx82snapshotwriter.cpp
         io/pokfilereader.cpp
         qtui/application.cpp
         qtui/mainwindow.cpp
