Updated ZX snapshot IO
- created writer class
- updated mainwindow to use writer class
- renamed internal data structures in reader class [consistency]
- fixed mistake in doc comments in reader class
- fixed reader class header file include guard [consistency]

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -47,6 +47,7 @@ add_executable(
         io/snasnapshotwriter.cpp
         io/spsnapshotwriter.cpp
         io/zx82snapshotwriter.cpp
+        io/zxsnapshotwriter.cpp
         io/pokfilereader.cpp
         qtui/application.cpp
         qtui/mainwindow.cpp
