Updated snapshot IO
- snapshot readers now provide a unique string identifying the type of snapshot they read
- snapshot readers now provide a means to check whether they think a file/stream matches the format they read
- added SnapshotFormatMatcher concept to support above
- added SnapshotFormatGuesser class to guess which of a number of formats is represented by a file/stream
- added SnapshotReaderFactory to instantiate an appropriate reader for a file/stream/format
- updated MainWindow to use guesser and factory when reading a snapshot

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -48,6 +48,8 @@ add_executable(
         io/spsnapshotwriter.cpp
         io/zx82snapshotwriter.cpp
         io/zxsnapshotwriter.cpp
+        io/snapshotformatmatcher.h
+        io/snapshotformatguesser.h
         io/pokfilereader.cpp
         qtui/application.cpp
         qtui/mainwindow.cpp
