Updated snapshot writing
- snapshot writers now provide a unique string identifying the type of snapshot they read
- added SnapshotWriterFactory to instantiate an appropriate writer for a format
- updated MainWindow to use factory when writing a snapshot

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -50,6 +50,9 @@ add_executable(
         io/zxsnapshotwriter.cpp
         io/snapshotformatmatcher.h
         io/snapshotformatguesser.h
+        io/snapshotreaderfactory.h
+        io/snapshotwriterclass.h
+        io/snapshotwriterfactory.h
         io/pokfilereader.cpp
         qtui/application.cpp
         qtui/mainwindow.cpp
